# CCT

./: .gitignore  Cargo.toml
.cursor/plans/: cct_trading_alert_system_4b6c600a.plan.md
docs/market/: BINANCE.md  IMPLEMENTING_EXCHANGES.md  MARKET_DATA.md  README.md
docs/market/changes/: CHANGELOG_MARKET_MODULE_2026-01-30.md
src/: lib.rs  main.rs  tcc.md
src/alerts/: mod.rs
src/db/: mod.rs
src/indicators/: candle.rs  candle_patterns.rs  mod.rs  momentum.rs  moving_averages.rs  timeframe.rs  volatility.rs
src/market/: market_data.rs  message_parser.rs  mod.rs  streams.rs  websocket_client.rs
src/market/providers/: binance.rs  mod.rs
tests/: market_doc_samples.rs
