[package]
name = "cct"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }

[dev-dependencies]
clippy = "0.0.302"
